# tec

./: .clang-format  .clang-format-ignore  .cmake-format.yaml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  AGENTS.md  AUTHORS.txt  CMakeLists.txt  CMakePresets.json  CODE_STYLE_GUIDE.md  CONTRIBUTING.md  Doxyfile  README.md  appveyor.yml  mkdocs.yml  opencppcovconfig.txt  vcpkg.json
.doxybook/: config.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: format.yml  tec.yml
client/: CMakeLists.txt  application.cpp  application.hpp  client-app.cpp  client-app.hpp  client-game-state-queue.cpp  client-game-state-queue.hpp  file-factories.cpp  game.cpp  game.hpp  imgui-system.cpp  imgui-system.hpp  lua-types.cpp  main.cpp  os.cpp  os.hpp  render-system.cpp  render-system.hpp  server-connection.cpp  server-connection.hpp  server_connection.cpp  server_connection.hpp  sound-system.cpp  sound-system.hpp  test-data.cpp  test_data.cpp  time-frame-metrics.hpp  voxel-volume.cpp  voxel-volume.hpp
client/graphics/: animation.cpp  animation.hpp  gbuffer.cpp  gbuffer.hpp  gl-symbol.hpp  lights.hpp  material.cpp  material.hpp  render-item.hpp  render-list.hpp  renderable.cpp  renderable.hpp  shader.cpp  shader.hpp  texture-object.cpp  texture-object.hpp  vertex-buffer-object.cpp  vertex-buffer-object.hpp  view.hpp  viewport.hpp
client/graphics/passes/: debug-pass.hpp  dir-light-pass.hpp  final-pass.hpp  geometry-pass.hpp  point-light-pass.hpp  render-pass.hpp
client/gui/: abs_window.hpp  active-entity-tooltip.cpp  active-entity-tooltip.hpp  console.cpp  console.hpp  debug-info.cpp  debug-info.hpp  server-connect.cpp  server-connect.hpp  sol_ImGui.h
client/manipulators/: placement.cpp  placement.hpp
client/physics/: physics-debug-drawer.cpp  physics-debug-drawer.hpp
client/resources/: checker.c  md5anim.cpp  md5anim.hpp  md5mesh.cpp  md5mesh.hpp  obj.cpp  obj.hpp  pixel-buffer.cpp  pixel-buffer.hpp  script-file.hpp  stb_image.h  stb_vorbis.c  vorbis-stream.cpp  vorbis-stream.hpp
cmake/: helpers.cmake  link_helpers.cmake
common/: CMakeLists.txt  command-queue.hpp  data-source.hpp  default-config.hpp  engine-entities.hpp  entity.hpp  event-list.hpp  event-queue.hpp  event-system.hpp  events.hpp  file-factories.cpp  file-factories.hpp  filesystem-linux.cpp  filesystem-macos.cpp  filesystem-unix.cpp  filesystem-win32.cpp  filesystem.cpp  filesystem.hpp  filesystem_platform.cpp  game-state-queue.cpp  game-state-queue.hpp  game-state.hpp  lua-system.cpp  lua-system.hpp  multiton.hpp  net-message.cpp  net-message.hpp  physics-system.cpp  physics-system.hpp  proto-load.cpp  proto-load.hpp  ring-buffer.hpp  save-game.cpp  save-game.hpp  server-message.hpp  server-stats.cpp  server-stats.hpp  simulation.cpp  simulation.hpp  string.cpp  (+9 more)
common/components/: collision-body.cpp  collision-body.hpp  lua-script.cpp  lua-script.hpp  shape.hpp  transforms.cpp  transforms.hpp  velocity.hpp
common/controllers/: fps-controller.cpp  fps-controller.hpp
common/proto/: commands.proto  components.proto  game_state.proto  graphics.proto  save_game.proto
common/resources/: mesh.cpp  mesh.hpp  script-file.cpp  script-file.hpp
common/user/: credentials.hpp  entity-data.hpp  user.cpp  user.hpp
docs/: index.md  requirements.in  requirements.txt
docs/engine/: index_classes.md  index_namespaces.md  index_pages.md
docs/lua/: callbacks.md  index.md
docs_targets/: CMakeLists.txt
docs_targets/doxybook/: CMakeLists.txt
docs_targets/doxygen/: CMakeLists.txt  Doxyfile.in
docs_targets/mkdocs/: CMakeLists.txt
include/: chat_message.hpp  command-queue.hpp  component-update-system.hpp  entity.hpp  event-queue.hpp  event-system.hpp  events.hpp  filesystem.hpp  game-state.hpp  imgui-system.hpp  lua-system.hpp  material.hpp  multiton.hpp  os.hpp  physics-system.hpp  polygonmeshdata.hpp  reflection.hpp  render-system.hpp  ring_buffer.hpp  server-message.hpp  shader.hpp  simulation.hpp  sound-system.hpp  string.hpp  transform.hpp  types.hpp  vcomputer-system.hpp  vertexbuffer.hpp  voxelvolume.hpp
include/components/: camera.hpp  collisionbody.hpp  lua-script.hpp  renderable.hpp  transforms.hpp  velocity.hpp
include/controllers/: fps-controller.hpp
include/graphics/: animation.hpp  gbuffer.hpp  lights.hpp  material.hpp  shader.hpp  texture-object.hpp  vertex-buffer-object.hpp  view.hpp
include/gui/: console.hpp  entity_tree.hpp
include/physics/: physics-debug-drawer.hpp
include/resources/: checker.c  md5anim.hpp  md5mesh.hpp  mesh.hpp  obj.hpp  pixel-buffer.hpp  script-file.hpp  stb_image.h  stb_vorbis.c  vorbis-stream.hpp
licenses/: hbl.txt  zlib.txt
modules/: FindGLEW.cmake  FindGLFW3.cmake  FindGTEST.cmake  FindGTEST_MAIN.cmake  SetCompilerFlags.cmake
proto/: components.pb.cc  components.pb.h  components.proto  game_state.pb.cc  game_state.pb.h
server/: CMakeLists.txt  client-connection.cpp  client-connection.hpp  client_connection.cpp  client_connection.hpp  lua-types.cpp  main.cpp  proto-load.cpp  proto-load.hpp  save-game.cpp  save-game.hpp  server-game-state-queue.cpp  server-game-state-queue.hpp  server.cpp  server.hpp
server/system/: user-authenticator.cpp  user-authenticator.hpp
server/user/: credentials.hpp  entity-data.hpp  user.cpp  user.hpp
src/: filesystem.cpp  imgui-system.cpp  lua-system.cpp  main.cpp  material.cpp  os.cpp  physics-system.cpp  polygonmeshdata.cpp  render-system.cpp  shader.cpp  simulation.cpp  sound-system.cpp  string.cpp  test_data.cpp  transform.cpp  types.cpp  vcomputer-system.cpp  voxelvolume.cpp
src/components/: camera.cpp  collisionbody.cpp  lua-script.cpp  renderable.cpp  (+1 more)
tests/: CMakeLists.txt  client-server-connection.cpp  event-list-test.cpp  filesystem_test.cpp  net-message_test.cpp  os_test.cpp  save-game_test.cpp  server-client-connection.cpp  user_test.cpp
travis/: build_deps.sh  install_cmake.sh
vcpkg_response_files/: vcpkg_common.txt  vcpkg_x64-linux.txt  vcpkg_x64-osx.txt  vcpkg_x64-windows.txt  vcpkg_x86-windows.txt
(+189 files in other folders)
